crates/core/tests/snapshots/container_type_test__generics__untagged_enum_deserialize_carries_generics.snap
---
source: crates/core/tests/container_type_test.rs
expression: pretty(container.impl_partial_type_deserialize())
---
#[automatically_derived]
impl<'de, T> serde::Deserialize<'de> for PartialExample<T> {
    fn deserialize<D>(deserializer: D) -> std::result::Result<Self, D::Error>
    where
        D: serde::Deserializer<'de>,
    {
        use serde::de::Error as _;
        let content = schematic::internal::buffer_untagged_content(deserializer)?;
        let mut errors: Vec<(&str, String)> = Vec::new();
        match <T as serde::Deserialize>::deserialize(
            schematic::serde_content::Deserializer::new(content.clone())
                .coerce_numbers()
                .human_readable(),
        ) {
            Ok(value) => return Ok(PartialExample::Value(value)),
            Err(error) => errors.push(("Value", error.to_string())),
        }
        if schematic::internal::is_null_content(&content) {
            return Ok(PartialExample::Nothing);
        }
        errors.push(("Nothing", "expected null".to_owned()));
        let mut message = format!(
            "failed to parse as any variant of {}:", stringify!(PartialExample)
        );
        for (variant, error) in &errors {
            message.push_str(&format!("\n- {variant}: {error}"));
        }
        Err(D::Error::custom(message))
    }
}
